# pixpec

./: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
analyze-rs/: Cargo.toml
analyze-rs/src/: main.rs
measure-rs/: Cargo.toml
measure-rs/src/: main.rs
scripts/: analyze.py  breakdown-prepare.ts  breakdown-verify.ts  breakdown.ts
scripts/slint-poc/: breakdown.ts  chip-emitted.slint  chip.slint  fetch-figma-ref.ts  inspect-ir.ts  run-emitter.ts  run-pixpec-text.ts  run-rgg.ts  run-tokens.ts  run.sh  sample-bg.ts  sweep-nudge.ts
scripts/slint-poc/render-rs/: Cargo.toml
scripts/slint-poc/render-rs/src/: main.rs
scripts/slint-poc/work/: pixpec-text.slint  results.json  tokens.slint
src/: analyze.ts  breakdown-verify.ts  breakdown.ts  cfigma-bridge.ts  cfigma-meta.ts  cli-child.ts  cli-rgg.ts  cli.ts  component-report.ts  dump-chromium.ts  dump-figma.ts  figma.ts  generate-v2.ts  generate.ts  index.ts  init.ts  measure-component.ts  measure-pool.ts  measure-worker.ts  measure.ts  render.ts  rgg.ts  runner.ts  spec.ts  types.ts  verify-generated.ts  verify.ts  view-config.ts
src/capture/: figma.ts  index.ts  resolve.ts
src/compiler/: compile.ts  component-props.ts  design-ast.ts  detach.ts  index.ts  props-context.ts  registry.ts  type-transformer.ts
src/compiler/nodes/: base.ts  container.ts  data-scope.ts  factory.ts  image.ts  index.ts  (+5 more)
src/dumper/: dump.ts  index.ts  raw-node.ts
src/emitter/: index.ts  types.ts
src/generator/: cli.ts  codegen.ts  ir.ts  validator.ts  walker.ts
src/targets/: index.ts  types.ts
(+50 files in other folders)
