[package]
name = "pixpec-measure"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
