[package]
name = "slint-poc-render"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.16", default-features = false, features = ["compat-1-2", "std", "renderer-software"] }
slint-interpreter = { version = "1.16", default-features = false, features = ["compat-1-2", "std", "display-diagnostics"] }
spin_on = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = "thin"
